API and polyfill update

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex Project</title>
     <link rel="stylesheet" href="css/styles.css">
+    <title>Pokedex Project</title>
   </head>
   <body>
     <h1 class="pokemon-title">pokedex</h1>
     <ul class="pokemon-list"></ul>
-    <script src="js/scripts.js"></script>
+    <strong>
+      <script src="js/promise-polyfill.js"></script>
+      <script src="js/fetch-polyfill.js"></script>
+      <script src="js/script.js"></script>
+    </strong>
   </body>
 </html>
