--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Pokedex Project</title>
   </head>
   <body>
-    <h1 class="pokemon-title">pokedex</h1>
+    <div id="modal-container"></div>
+    <h1 class="pokemon-title">Pokedex</h1>
     <ul class="pokemon-list"></ul>
     <strong>
       <script src="js/promise-polyfill.js"></script>
