--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.11/dist/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-      <script src="js/promise-polyfill.js"></script>
-      <script src="js/fetch-polyfill.js"></script>
-      <script src="js/script.js"></script>
+      <script src="dist/js/fetch-polyfill.js"></script>
+      <script src="dist/js/fetch-polyfill.js"></script>
+      <script src="dist/js/script.js"></script>
     </strong>
   </body>
 </html>
